--- a/app/src/main/res/layout/activity_your_team_list.xml
+++ b/app/src/main/res/layout/activity_your_team_list.xml
@@ -16,7 +16,7 @@
         android:layout_below="@+id/toolbar"
         android:orientation="vertical">
 
-            <com.google.android.material.card.MaterialCardView
+            <!--<com.google.android.material.card.MaterialCardView
                 android:id="@+id/mcv_submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,8 +84,28 @@
                         android:textSize="@dimen/_10sdp"
                         app:cornerRadius="@dimen/_50sdp" />
                 </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
+            </com.google.android.material.card.MaterialCardView>-->
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/mb_add_new_team"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:backgroundTint="@color/purple_500"
+            android:fontFamily="@font/opensans_bold"
+            android:paddingTop="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_10sdp"
+            android:text="@string/submit"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_10sdp"
+            app:cornerRadius="@dimen/_50sdp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_teamList"
