--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -10,10 +10,25 @@
     </style>
 
 
+
+
     <style name="HintTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/_10sdp</item>
         <item name="android:fontFamily">@font/opensans_regular</item>
+    </style>
+
+    <style name="HintTextAppearancee" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:textSize">@dimen/_10sdp</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
+    </style>
+
+    <style name="MyChipTextAppearanceList" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/_9sdp</item>
+        <item name="android:textColor">@color/dim_grey</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
 
