--- a/app/src/main/res/drawable/circle_white.xml
+++ b/app/src/main/res/drawable/circle_white.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="oval">
+    <item>
+        <shape
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="oval">
 
-        <solid
-            android:color="#fff"/>
-    </shape>
-</item>
+            <solid
+                android:color="@color/light_gray"/>
 
+            <corners
+                android:radius="@dimen/_2sdp"/>
+
+            <!-- Set the stroke width and color -->
+            <stroke
+                android:color="@color/dark_grey"
+                android:width="1dp"/> <!-- Set the width of the border -->
+
+        </shape>
+    </item>
 </layer-list>
-
