--- a/app/src/main/res/layout/your_player_list_child.xml
+++ b/app/src/main/res/layout/your_player_list_child.xml
@@ -29,15 +29,15 @@
                 android:id="@+id/image"
                 android:layout_width="@dimen/_45sdp"
                 android:layout_height="@dimen/_45sdp"
-                app:civ_border_width="@dimen/_4sdp"
                 android:src="@drawable/placeholder_user"
+                app:civ_border_width="@dimen/_4sdp"
                 tools:ignore="ImageContrastCheck" />
 
         </RelativeLayout>
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_toLeftOf="@+id/cb"
@@ -45,28 +45,19 @@
             android:orientation="vertical">
 
 
-            <TextView
-                android:id="@+id/tvTName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginEnd="@dimen/_2sdp"
-                android:text="Player Name (Bowler)"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp"
-                app:fontFamily="@font/opensans_semibold" />
-
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_3sdp"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tvtLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
+                    android:visibility="gone"
                     android:layout_gravity="center_vertical"
                     android:drawableLeft="@drawable/call_black_18dp"
                     android:drawablePadding="@dimen/_2sdp"
@@ -74,11 +65,14 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/_8sdp"
                     app:fontFamily="@font/opensans_regular" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                  android:layout_alignParentEnd="true"
-                    android:orientation="vertical">
+                    android:layout_alignParentEnd="true"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -87,13 +81,14 @@
                         android:textColor="@color/black"
                         android:textSize="@dimen/_8sdp"
                         app:fontFamily="@font/opensans_regular" />
+
                     <TextView
                         android:id="@+id/tvtRole"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end"
-                        android:text="Captain"
                         android:gravity="end"
+                        android:text="Captain"
                         android:textColor="@color/purple_700"
                         android:textSize="@dimen/_8sdp"
                         app:fontFamily="@font/opensans_regular" />
@@ -103,11 +98,28 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tvTName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/_2sdp"
+            android:paddingStart="@dimen/_2sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:text="Player Name (Bowler)"
+            android:layout_toLeftOf="@+id/cb"
+            android:layout_toRightOf="@+id/rl_profile"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12sdp"
+            app:fontFamily="@font/opensans_semibold" />
+
         <CheckBox
             android:id="@+id/cb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:visibility="visible">
 
         </CheckBox>
